Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectInteger.quorum
class Main
    action Main
        Object o        
        o = cast(Object, 5)
        output "passed"
    end
end