Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntegerBoolean.quorum
class Main
    action Main
        integer int = 0
        int = cast(integer, true)
    end
end
